--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,14 @@
     "description": "KUDI SMS Notifications Driver for Laravel.",
     "homepage": "https://github.com/toneflix-code/kudi-notification",
     "license": "MIT",
+    "keywords": [
+        "SMS",
+        "Kudi",
+        "Legacy",
+        "laravel",
+        "kudisms",
+        "kudisms-notification"
+    ],
     "authors": [
         {
             "name": "Legacy",
@@ -19,6 +27,7 @@
         "toneflix-code/kudi-sms-php": "^1.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.0",
         "fakerphp/faker": "^1.21",
         "illuminate/contracts": "^9.0|^10.0",
         "orchestra/testbench": "^8.8",
@@ -27,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "ToneflixCode\\KudiSmsNotification\\": "src/"
+            "ToneflixCode\\KudiSmsNotification\\": "src/",
+            "ToneflixCode\\KudiSmsNotification\\Tests\\Database\\Factories\\": "tests/database/factories"
         }
     },
     "autoload-dev": {
@@ -39,16 +49,36 @@
         "laravel": {
             "providers": [
                 "ToneflixCode\\KudiSmsNotification\\KudiSmsProvider"
-            ]
+            ],
+            "aliases": {
+                "KudiNotification": "ToneflixCode\\KudiSmsNotification\\KudiSmsProvider\\Facades\\KudiNotification"
+            }
         }
     },
     "scripts": {
-        "test": "pest"
+        "post-autoload-dump": "@composer run prepare",
+        "clear": "@php vendor/bin/testbench package:purge-laravel-pay-pocket --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": [
+            "@composer run prepare",
+            "@php vendor/bin/testbench workbench:build --ansi"
+        ],
+        "start": [
+            "Composer\\Config::disableProcessTimeout",
+            "@composer run build",
+            "@php vendor/bin/testbench serve"
+        ],
+        "analyse": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest --coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
