--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
     "fakerphp/faker": "^1.21",
     "illuminate/contracts": "^9.0|^10.0|^11.0|^12.0",
     "orchestra/testbench": "^8.8|9.0",
-    "pestphp/pest": "^2.33",
-    "pestphp/pest-plugin-laravel": "^2.0"
+    "pestphp/pest": "^2.33|^3.0",
+    "pestphp/pest-plugin-laravel": "^2.0|^3.1"
   },
   "autoload": {
     "psr-4": {
